# cxx14_range_algorithms

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  range.hpp
tests/: CMakeLists.txt  test_adjacent_find.cc  test_all_of.cc  test_any_of.cc  test_binary_search.cc  test_copy.cc  test_count.cc  test_equal.cc  test_fill.cc  test_find.cc  test_find_end.cc  test_find_first.cc  test_for_each.cc  test_generalized_numeric_operations.cc  test_generate.cc  test_heap_operations.cc  test_is_permutation.cc  test_lexicographical_comparison.cc  test_merge.cc  test_minimum_and_maximum.cc  test_mismatch.cc  test_move.cc  test_none_of.cc  test_nth_element.cc  test_partitions.cc  test_permutation_generators.cc  test_range.cc  test_remove.cc  test_replace.cc  test_reverse.cc  test_rotate.cc  test_search.cc  test_set_operations.cc  test_shuffle.cc  test_sorting.cc  test_swap.cc  test_transform.cc  test_unique.cc  unittest.cc
